style.css
@font-face{font-family: square;	src: url(fonts/sq.otf); }
@font-face{font-family: roboto;	src: url(fonts/roboto-slab.regular.ttf); }
@font-face{font-family: roboto; font-weight:200;	src: url(fonts/roboto-slab.light.ttf); }
@font-face{font-family: source; src: url(fonts/SourceSansPro-Regular.otf); }

html {
	font:1rem;
	color:black;
	background-color:white;
}
body{
	margin:0;
	padding-bottom:500px;
}
a{
	text-decoration:none;
	color:inherit;
}
a:hover{
	font-width:bold;
}
h1{
	font-size:1.3em;
	border-bottom-style:solid;
}
h2{
	font-size:1.1em;
}
nav{
	box-shadow: 0 10px 15px 0 rgba(0,0,0,0.2);
	color:white;
	background-color:#1b4377;
	position:fixed;
	width:100%;
	position:sticky;
	top:0px;
	text-align:center;
	font-size:1.2em;

	/* display:flex;
	-webkit-flex-flow:row wrap;
	justify-content:space-around; */
}
nav img{
	margin:4px 0px;
	vertical-align:middle;
	background-color:inherit;
}
nav ul{
	margin:0px;
	padding:3px 0px;
}
nav li{
	display:inline;
	list-style:none;
}
nav a{
	vertical-align:middle;
	box-sizing:border-box;
	margin:0px 2%;
	text-decoration:none;
	color:white;
}
nav img{
	padding:3px 10px;
}
nav a:hover{
	background-color:#0c3c7b;
}
#banner{
	height:auto;
	max-height:300px;
	overflow:hidden;
	background-color:black;
}
main{
	width:60%;
	margin:auto;
}

.workmap h2{
	text-align:center;
	padding-bottom:15px;
}
.workmap ul{
	list-style-type:none;
	display:inline-table;
	padding-left:0;
	padding:0;
	margin:12px;
}
.workmap li{
	padding:10px;
	box-sizing:border-box;
	margin:16px auto;
	width:140px;
	height:180px;
	border-style:solid;
	border-width:1px;
	box-shadow: 0 5px 15px 0 rgba(0,0,0,0.2);
}
.workmap li:hover{
	border-width:1px;
	box-shadow: 0 10px 20px 0 rgba(0,0,0,0.5);
}
.workmap{
	margin:auto;
	width:fit-content;
	display:flex;
	-webkit-flex-flow:row wrap;
	justify-content:space-around;
}
@media screen and (max-width:1700px){
	main{
		width:80%;
	}
}
@media screen and (max-width: 800px){
	.workmap ul{
		margin:5px;
	}
	.workmap li{
		margin:0px 0px inherit;
	}
}
@media screen and (max-width:520px){
	#react{
		display:none;
	}
}
@media screen and (max-width:400px){
	main{
		margin:10px;
		width:93%;
	}
	.workmap ul{
		margin:0px;
	}
}
.profile {
	margin:auto;
	margin-top:50px;
}
.profile img {
	vertical-align:top;
	border-style:solid;
	border-color:white;
	border-width:1px;
	float:left;
	opacity:0.9;
	margin:auto 10px;
}
.profile h1 , .profile h2{
	border-color:#ffffff;
	border-left-style:solid;
	border-width:1px;
	text-align:left;
}
.profile h1{
	display:inline;
}
.profile h2{
	display:inline;
	padding-left:10px;
}
.profile p , .profile h1{
	padding-left:15px;
	text-align:left;
}

#banner {
	background-image:url("images/banner.png");
	background-size:cover;
	background-position:center;
	height:200px;
	
	color:white;
	text-align:center;
}
#banner h1{
	padding:10px;
	border-style:none;
	background-color:rgba(0, 36, 74, 0.4);;
	position:relative;
	top:60px;
}

